# spawn-fcgi

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile.in  README.md  config.h.in  configure  configure.ac
doc/: Makefile.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  spawn-common.h  spawn-fcgi.c  spawn-manager.c
